--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^1.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
+    "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +26,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
