--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev/db"
+DATABASE_URL="postgres://postgres.hceiwmfmhkillylijmch:PatosCodes.123@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 SECRET_KEY_ADMIN="mlkXsusAyzUo0nX8Bj18KYxWe59YDB7B"
 BASE_URL="http://localhost:3000"
