correction in db type

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgres://postgres.hceiwmfmhkillylijmch:PatosCodes.123@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
-SECRET_KEY_ADMIN="mlkXsusAyzUo0nX8Bj18KYxWe59YDB7B"
+SECRET_KEY_ADMIN="admin"
 BASE_URL="http://localhost:3000"
